--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "scripts": {
     "lint": "eslint --fix src test",
     "doc": "jsdoc -c ./jsdoc.json",
-    "test": "mocha --colors",
-    "test:report": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec",
-    "test:coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
+    "test": "nyc mocha --colors",
+    "test:report": "nyc --reporter=lcov mocha --colors",
+    "lcov": "nyc report --reporter=text-lcov > coverage.lcov",
     "prepublishOnly": "npm run lint && npm test"
   },
   "engines": {
@@ -59,18 +59,18 @@
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "css-loader": "^2.0.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-webdeveric": "^0.3",
     "file-loader": "^3.0.0",
     "fs-extra": "^7.0.1",
-    "istanbul": "^0.4",
     "jsdoc": "^3.0",
     "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.2.0",
     "rimraf": "^2.6.3",
     "superagent": "^4.0.0",
-    "webpack": "^4.29.0",
+    "webpack": "^4.29.3",
     "webpack-dev-server": "^3.1.14"
   }
 }
